Removed delete button from TodoItemEditing component, fixed mobile styling Removed delete button from TodoItemEditing component to make room on mobile screens, changes some global css attributes to improve mobile responsiveness

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,23 +1,18 @@
 body {
-  font-family: "Arial";
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   text-align: center;
   height: 100%;
-  padding: 0;
-  margin: 0;
-  font-size: 120%;
-  box-sizing: border-box;
+  width: 100%;
+  font-family: "Arial";
   background: pink;
 }
 
 .todo-list {
   display: flex;
   flex-direction: column;
-  min-width: 450px;
-  min-height: 400px;
 }
 
 .container {
